--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
   background-color: #e7e9eb;
   display: flex;
   /* justify-content: space-between; */
-  margin: 2rem auto;
+  margin: 3rem auto;
 }
 
 /* .winner {
@@ -21,20 +21,28 @@
 
 .player {
   width: 100%;
-  padding: 3rem;
+  padding-top: 9rem;
   text-align: center;
-  background-color: aliceblue;
+  /* background-color: aliceblue; */
 }
 
 .computer-player {
   /* background-color: yellow; */
-  border-left: 2px solid red;
+  border-left: 1px solid red;
 }
 
 .image {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   width: 30%;
   margin: 1.3rem auto;
+  border: 2px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+}
+
+.image i {
   font-size: 3rem;
 }
 
