--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ body {
   background-color: #212121; /* Black */
   color: #ffffff; /* White */
   outline: none;
-  padding: 10px 20px;
+  padding: 1.1rem;
   font-size: 1rem;
   border-radius: 5px;
   display: inline-flex;
@@ -100,5 +100,54 @@ body {
 }
 
 .icon-button:hover {
+  background-color: #90caf9; /* Soft Blue */
+}
+
+#dark {
+  position: absolute;
+  cursor: pointer;
+  top: 1rem;
+  right: 3rem;
+  font-size: 3rem;
+}
+
+/* Dark Mode */
+body.dark-mode {
+  background-color: #121212; /* Dark Background */
+  color: #e0e0e0; /* Light Text */
+}
+
+.dark-mode .container {
+  background-color: #1e1e1e; /* Darker Container */
+  border-color: #616161; /* Gray Border */
+}
+
+.dark-mode .computer-player {
+  border-left: 1px solid #616161; /* Gray Border */
+}
+
+.dark-mode .image {
+  border-color: #90caf9; /* Soft Blue */
+}
+
+.dark-mode .icons {
+  color: #90caf9; /* Soft Blue */
+}
+
+.dark-mode .newBtn {
+  background-color: #90caf9; /* Soft Blue */
+  color: #121212; /* Dark Text */
+}
+
+.dark-mode .newBtn:hover {
+  background-color: #64b5f6; /* Lighter Blue */
+  color: #121212; /* Dark Text */
+}
+
+.dark-mode .icon-button {
+  background-color: #616161; /* Gray */
+}
+
+.dark-mode .icon-button:hover {
   background-color: #90caf9; /* Soft Blue */
 }
