--- a/css/querie.css
+++ b/css/querie.css
@@ -15,14 +15,14 @@
   }
 
   .icons {
-    top: 35rem;
+    top: 27rem;
     left: 50%;
-    font-size: 3rem;
+    font-size: 3.3rem;
     flex-direction: row;
   }
 
   .newBtn {
-    top: 27rem;
+    top: 35rem;
     left: 50%;
     font-size: 1.9rem;
     padding: 1.3rem;
@@ -32,9 +32,57 @@
     display: none;
   }
 
-  .footer {
+  .modal,
+  .modal2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    /* transform: translate(-50%, -50%); */
+    width: 90%;
+    background-color: white;
+    padding: 3rem 1rem;
+    border-radius: 5px;
+    z-index: 10;
+  }
+  .inputHolder {
+    flex-direction: column;
+    /* border: 1px solid #0d47a1; */
+    gap: 1rem;
+  }
+
+  .editField {
+    padding: 1rem;
+    margin-top: 1rem;
+    font-size: 1rem;
+    border: 1px solid #0d47a1;
+    outline: none;
+    width: 100%;
+    border-radius: 5px;
+  }
+
+  #editNameBtn {
+    width: 100%;
+    cursor: pointer;
+    border: 1px solid #212121;
+    color: #000;
+    padding: 1rem;
+    font-size: 1rem;
+    outline: none;
+    border-radius: 5px;
+  }
+
+  .modalBtn {
+    margin: 0 auto;
+    top: 46rem;
+    left: 36%;
+    padding: 1rem 2.3rem;
     font-size: 2rem;
-    margin-top: 20rem;
+    border-radius: 5px;
+  }
+
+  .footer {
+    font-size: 2.2rem;
+    margin-top: 22rem;
     padding: 0.8rem auto;
   }
 }
@@ -75,6 +123,7 @@
     font-size: 1.3rem;
     padding: 1rem;
   }
+
   .footer {
     font-size: 1.6rem;
     margin-top: 20rem;
@@ -102,6 +151,7 @@
   .image {
     width: 60%;
   }
+
   .icons {
     top: 18rem;
     left: 50%;
@@ -114,6 +164,14 @@
     left: 50%;
     font-size: 1.3rem;
     padding: 1rem;
+  }
+
+  .modalBtn {
+    top: 36rem;
+    left: 30%;
+    padding: 1rem 2rem;
+    font-size: 1.5rem;
+    border-radius: 5px;
   }
 
   .footer {
